// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`placeCheckoutOrder > returns the recent duplicate instead of placing again > duplicate result 1`] = `
"{
 "id": "dup-1",
 "user_id": "00000000-0000-0000-0000-000000000001",
 "customer_name": "Asha",
 "customer_phone": "+919999999999",
 "order_status": "placed",
 "payment_status": "pending",
 "payment_method": "cod",
 "order_total": 274.4,
 "subtotal": 293.5,
 "delivery_fee": 0,
 "discount_amount": 29.35,
 "items": [
  {
   "product_id": "00000000-0000-4000-8000-000000000001",
   "name": "Milk",
   "price": 42,
   "quantity": 2
  },
  {
   "product_id": "00000000-0000-4000-8000-000000000002",
   "name": "Rice (loose)",
   "price": 25.5,
   "quantity": 3
  },
  {
   "product_id": "00000000-0000-4000-8000-000000000003",
   "name": "Ghee",
   "price": 112,
   "quantity": 1
  }
 ],
 "items_count": 3,
 "shipping_address": {
  "address": "1 Park St",
  "latitude": 22.5726,
  "longitude": 88.3639
 },
 "gstin": null,
 "gstin_business_name": null,
 "receiver_name": null,
 "receiver_phone": null,
 "receiver_address": null,
 "tip_amount": 0,
 "created_at": "2026-10-05T09:59:50Z",
 "order_number": "NN20261005-0041"
}"
`;

exports[`placeCheckoutOrder > returns the same order and writes the same payload > place payload 1`] = `
"{
 "p_customer_order": {
  "customer_id": "00000000-0000-0000-0000-000000000001",
  "order_code": "NN20261005-0042",
  "status": "pending_at_store",
  "payment_status": "pending",
  "payment_method": "cod",
  "subtotal_amount": 272.5,
  "delivery_fee": 0,
  "discount_amount": 27.25,
  "total_amount": 279.15,
  "delivery_address": "1 Park St",
  "delivery_latitude": 22.5726,
  "delivery_longitude": 88.3639,
  "notes": null,
  "gstin": null,
  "gstin_business_name": null,
  "receiver_name": null,
  "receiver_phone": null,
  "receiver_address": null,
  "tip_amount": 0,
  "delivery_otp": "####"
 },
 "p_store_chunks": [
  {
   "store_id": "S2",
   "subtotal": 112,
   "delivery_fee": 0,
   "items": [
    {
     "product_id": "p-s2-3",
     "product_name": "Ghee",
     "unit": null,
     "image_url": null,
     "unit_price": 112,
     "quantity": 1
    }
   ]
  },
  {
   "store_id": "S1",
   "subtotal": 160.5,
   "delivery_fee": 0,
   "items": [
    {
     "product_id": "p-s1-1",
     "product_name": "Milk",
     "unit": null,
     "image_url": null,
     "unit_price": 42,
     "quantity": 2
    },
    {
     "product_id": "p-s1-2",
     "product_name": "Rice (loose)",
     "unit": null,
     "image_url": null,
     "unit_price": 25.5,
     "quantity": 3
    }
   ]
  }
 ]
}"
`;

exports[`placeCheckoutOrder > returns the same order and writes the same payload > result 1`] = `
"{
 "id": "order-1",
 "user_id": "00000000-0000-0000-0000-000000000001",
 "customer_name": "Asha",
 "customer_phone": "+919999999999",
 "order_status": "placed",
 "payment_status": "pending",
 "payment_method": "cod",
 "order_total": 279.15,
 "subtotal": 272.5,
 "delivery_fee": 0,
 "discount_amount": 27.25,
 "items": [
  {
   "product_id": "00000000-0000-4000-8000-000000000001",
   "name": "Milk",
   "price": 42,
   "quantity": 2
  },
  {
   "product_id": "00000000-0000-4000-8000-000000000002",
   "name": "Rice (loose)",
   "price": 25.5,
   "quantity": 3
  },
  {
   "product_id": "00000000-0000-4000-8000-000000000003",
   "name": "Ghee",
   "price": 112,
   "quantity": 1
  }
 ],
 "items_count": 3,
 "shipping_address": {
  "address": "1 Park St",
  "latitude": 22.5726,
  "longitude": 88.3639
 },
 "tip_amount": 0,
 "created_at": "2026-10-05T10:00:00Z",
 "order_number": "NN20261005-0042"
}"
`;

exports[`placeCheckoutOrder > the same error wins at every failure point, alone and combined > errors 1`] = `
"{
 "orderCode": "Failed to generate order number: sequence unavailable",
 "stores": "Failed to look up nearby stores: stores down",
 "noStores": "No store available for your delivery address. Please contact support.",
 "stock": "Failed to verify product availability: stock down",
 "prices": "Failed to verify product prices",
 "couponInvalid": "Coupon code \\"SAVE10\\" is not valid or is no longer active",
 "orderCode+noStores+prices": "Failed to generate order number: sequence unavailable",
 "stores+prices": "Failed to look up nearby stores: stores down",
 "noStores+prices": "No store available for your delivery address. Please contact support.",
 "stock+prices": "Failed to verify product availability: stock down",
 "prices+couponInvalid": "Failed to verify product prices",
 "orderCode+malformedItem": "Failed to generate order number: sequence unavailable",
 "malformedItem": "Product(s) not available: Junk",
 "malformedItem+stores": "Product(s) not available: Junk",
 "unknownProduct": "Product \\"Saffron\\" is not available.",
 "tooMany": "Quantity for \\"Ghee\\" must be between 1 and 5.",
 "totalTooLow": "Order total does not match item prices. Please refresh your cart and try again.",
 "couponInvalid+totalTooLow": "Coupon code \\"SAVE10\\" is not valid or is no longer active",
 "splitMismatch": "Split payment amounts do not add up to the order total. Please refresh and try again."
}"
`;
